# bookminer

./: Cargo.toml  README.md  custom-dictionary.dic  spellcheck.toml
.github/workflows/: rust.yml
src/: anki_config.rs  anki_error_handling.rs  ankiconnect.rs  edit_files.rs  env_variables.rs  main.rs  main_application.rs  menu_actions.rs  paths.rs  possible_entries.rs  screenshot.rs  tui_windows.rs
src/ui/: tui.rs
